<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F4FC"
    tools:context=".ui.DetailsNeighbour_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/Activity_Toolbar_Details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEFFFFFF">


            <ImageView

                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerCrop" />

            <ImageButton

                android:id="@+id/return_btn"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp"
                tools:visibility="visible" />

            <TextView

                android:id="@+id/firstname"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="175dp"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@android:color/primary_text_dark"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_star_black_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/info"
        android:layout_width="370dp"
        android:layout_height="220dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="13dp">

        <RelativeLayout
            android:id="@+id/RelativeLayout_infos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infos_card_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/location_img"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="65dp"
                app:srcCompat="@drawable/ic_location_on_pink_24dp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="65dp"
                android:layout_toEndOf="@id/location_img"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/phone_view"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/location_img"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_call_pink_24dp" />

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_below="@+id/address"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/phone_view"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/web_view"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@id/phone_view"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_language_pink_24dp" />

            <TextView
                android:id="@+id/web"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_below="@id/phoneNumber"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/web_view"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView

        android:id="@+id/about"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info">

        <RelativeLayout

            android:id="@+id/RelativeLayout_aboutMe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutMe_tittle"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="A propos de moi"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutMe"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_below="@id/aboutMe_tittle"
                android:layout_alignStart="@+id/aboutMe_tittle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>