...
        app:layout_constraintBottom_toBottomOf="@+id/item_list_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list_name"
        app:srcCompat="@drawable/ic_delete_white_24dp" />

    <Button
        android:id="@+id/detailsNeighbour_btn"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:focusable="false"
...
